Bug Squash Anterior: 45 faltando

--- a/johnatas-henrique/css/estilo.css
+++ b/johnatas-henrique/css/estilo.css
@@ -4,20 +4,20 @@
 }
 
 @font-face {
-  font-family: animeace, sans-serif;
-  src: url( ../fonts/animeace2_reg.ttf );
+  font-family: animeace , sans-serif;
+  src: url( "../fonts/animeace2_reg.ttf" );
 }
 
 @font-face {
-  font-family: animeace, sans-serif;
-  src: url( ../fonts/animeace2_bld.ttf );
+  font-family: animeace , sans-serif;
+  src: url( "../fonts/animeace2_bld.ttf" );
   font-weight: 700;
 }
 
 body {
-  font-family: animeace, sans-serif;
-  background-image: url( ../imagens/bg.jpg );
-  background-color: rgba(255 , 255 , 255 , 0.45);
+  font-family: animeace , sans-serif;
+  background-image: url( "../imagens/bg.jpg" );
+  background-color: rgba( 255 , 255 , 255 , 0.45 );
   background-blend-mode: lighten;
 }
 
@@ -26,12 +26,8 @@ body {
   -webkit-text-stroke: 1px black;
   font-size: 3em;
   color: white;
-  text-shadow:
-    3px 3px 0 black,
-    -1px -1px 0 black,
-    1px -1px 0 black,
-    -1px 1px 0 black,
-    1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black ,
+    1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
 }
 
 .centralizar {
@@ -40,23 +36,19 @@ body {
 
 .container {
   width: 640px;
-  margin: 20px auto 0;
+  margin: 10px auto 0;
 }
 
 .texto-info {
   font-size: 1.8em;
   display: block;
   text-align: center;
-  margin: 15px auto;
+  margin: 10px auto;
   font-weight: 700;
   -webkit-text-stroke: 1px black;
   color: white;
-  text-shadow:
-    3px 3px 0 black,
-    -1px -1px 0 black,
-    1px -1px 0 black,
-    -1px 1px 0 black,
-    1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black ,
+    1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
 }
 
 .caixa-texto-input {
@@ -87,8 +79,7 @@ body {
   margin: 0 auto;
 }
 
-.esconder-caixa:focus + label,
-.esconder-caixa + label:hover {
+.esconder-caixa:focus + label , .esconder-caixa + label:hover {
   background-color: red;
   color: white;
 }
@@ -120,10 +111,6 @@ body {
   font-size: 2em;
   -webkit-text-stroke: 1px black;
   color: white;
-  text-shadow:
-    3px 3px 0 black,
-    -1px -1px 0 black,
-    1px -1px 0 black,
-    -1px 1px 0 black,
-    1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black ,
+    1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
 }
